--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
 
-        <item name="android:windowBackground">#55B9BF</item>
+        <item name="android:windowBackground">#F95738</item>
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     </style>
 
